# BarSteuerung

backend/: CMakeLists.txt  RestServer.cpp  main.cpp
backend/header/: BulbController.h  ColorConverter.h  LedController.h  PlugHandler.h  RCSwitch.h  RestServer.h  pyhelper.h
backend/lib/PiLED/: PiLED.cpp  PiLED.h
backend/lib/PiLED/FastLED/: lib8tion.h  pixeltypes.h
backend/lib/ws281x/: ws281x.cpp
backend/python/: LedControllerPython.py
backend/src/: BulbController.cpp  LedController.cpp  PlugHandler.cpp  RCSwitch.cpp  RestServer.cpp
frontend/: index.html
frontend-remastered/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend-remastered/e2e/src/: app.e2e-spec.ts
frontend-remastered/src/: index.html  styles.less
frontend-remastered/src/app/: app.component.html  app.component.less  app.component.spec.ts  app.component.ts  app.module.ts
frontend-remastered/src/app/ceiling-light/: ceiling-light.component.html  ceiling-light.component.ts
frontend-remastered/src/app/front-light/: front-light.component.html  front-light.component.ts
frontend-remastered/src/app/power-plugs/: power-plugs.component.html  power-plugs.component.spec.ts  power-plugs.component.ts
frontend-remastered/src/app/shared-apps/: tab-interface.ts  toast-interface.ts
frontend-remastered/src/app/shelf-light/: shelf-light.component.html  shelf-light.component.spec.ts  shelf-light.component.ts
frontend-remastered/src/app/work-light/: work-light.component.html  (+3 more)
frontend/css/: style.css
frontend/js/: ceiling_light.js  design.js  requests.js
(+50 files in other folders)
